--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "fastapi>=0.121.3",
+    "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
